syntax = "proto3";

package com.example.grpcDemo.adapters.grpc.person;

service PersonService{
  rpc ConsultaPessoa(PersonRequest) returns (PersonResponse){
  }
}

message PersonRequest {
  string cpf = 1;
}

message PersonResponse {
  string name = 1;
  int32 id = 2;
  string email = 3;
}